Improve content height

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -12,7 +12,7 @@
 
 
 
-<div id="tabletop" class="row full_height">
+<div id="tabletop" class="row">
 
     <div class="col-lg-offset-2 col-lg-8 col-xs-12 full_height">
         <div id="joust-container" class="full_height"></div>
