--- a/hsreplaynet/web/static/web/base.css
+++ b/hsreplaynet/web/static/web/base.css
@@ -24,8 +24,11 @@ nav, header {
 }
 
 #content {
-	height: calc(100% - 100px);
 	min-height: 500px;
+}
+
+#tabletop {
+	height: calc(100% - 100px);
 }
 
 #navbar-logo {
