--- a/hsreplaynet/web/static/web/base.css
+++ b/hsreplaynet/web/static/web/base.css
@@ -15,6 +15,8 @@ body {
 }
 
 body, html{
+	margin: 0;
+	padding: 0;
 	height: 100%;
 	font-family: 'Raleway', sans-serif;
 }
@@ -74,4 +76,16 @@ header nav h1 {
 	vertical-align: middle;
 	font-size: 1.5em;
 	text-shadow: 1px 1px black;
+}
+
+footer {
+	clear: both;
+	color: #aaa;
+	font-size: x-small;
+	padding-top: 3em;
+	text-align: center;
+}
+
+footer a {
+	color: #aaa;
 }
