Tweak global footer text and layout

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -68,13 +68,13 @@
 	{% block content %}
 	{% endblock content %}
 	</div>
+
 	<footer>
 		{% block footer %}
 		<p>
-			Copyright &copy; {% now 'Y' %} - <a href="https://hearthsim.info">HearthSim</a>
-		</p>
-		<p>
-			<a href="/about/privacy/">Privacy Policy</a> - <a href="/about/tos/">Terms of Service</a>
+			<a href="https://hearthsim.info">HearthSim</a> &copy; {% now 'Y' %}  &middot;
+			<a href="/about/privacy/">Privacy Policy</a> &middot;
+			<a href="/about/tos/">Terms of Service</a>
 		</p>
 		<p>
 			This website is not affiliated with Blizzard Entertainment.
