Only load home CSS when required

--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -2,6 +2,11 @@
 {% load static from staticfiles %}
 {% load socialaccount %}
 
+{% block stylesheets %}
+    {{ block.super }}
+	<link href="{% static 'web/home.css' %}" rel="stylesheet"/>
+{% endblock stylesheets %}
+
 {% block header %}
 {% endblock %}
 
