--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -13,7 +13,7 @@
     {% endblock title %}
 
       {% block stylesheets %}
-		  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Raleway:400,700" rel="stylesheet" type="text/css">
+		  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
           <!-- base.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/base.css' %}" rel="stylesheet"/>
