--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -17,6 +17,7 @@
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
           <!-- base.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/base.css' %}" rel="stylesheet"/>
+          <link href="{% static 'web/my_replays.css' %}" rel="stylesheet"/>
       {% endblock stylesheets %}
 
     <link rel="shortcut icon" type="image/png" href="{% static  'web/images/favicon.ico' %}"/>
