--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -42,7 +42,9 @@
 					Study and improve your own gameplay.<br/>
 					Share your craziest moments.
 				</p>
-				<img src="{% static 'web/images/joust-screenshot.jpg' %}" id="feat-joust-screenshot" alt="Joust: View your HSReplays"/>
+				<a href="{% static 'web/images/joust-screenshot.jpg' %}">
+					<img src="{% static 'web/images/joust-screenshot.jpg' %}" id="feat-joust-screenshot" alt="Joust: View your HSReplays"/>
+				</a>
 			</div>
 
 			<figure class="front-feature">
