--- a/hsreplaynet/templates/flatpages/default.html
+++ b/hsreplaynet/templates/flatpages/default.html
@@ -1,13 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
-{% block stylesheets %}
-	{{ block.super }}
-	<link href="{% static 'web/flatpages.css' %}" rel="stylesheet"/>
-{% endblock stylesheets %}
-
 {% block content %}
-<article id="flatpage">
+<article id="flatpage" class="page">
 	<header id="flatpage-header">
 		<h2 id="flatpage-title">{{ flatpage.title }}</h2>
 	</header>
