--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -48,7 +48,7 @@
 			<ul class="right">
 			{% if user.is_authenticated %}
 				<li class="dropdown">
-					<a href="{% url 'account_logout' %}">
+					<a href="{% url 'account_edit' %}">
 						<img src="{% static 'web/images/bnet.png' %}"/>
 						<span>{{ user.username }}</span>
 					</a>
