--- a/hsreplaynet/web/static/web/my_replays.css
+++ b/hsreplaynet/web/static/web/my_replays.css
@@ -56,18 +56,20 @@ a.hsreplay-thumbnail:link, a.hsreplay-thumbnail:hover {
 }
 
 .hsreplay-involved figcaption {
-	font-size: 1vw;
-	color: white;
-	position: absolute;
 	background-color: rgba(0, 0, 0, 0.65);
+	color: white;
+	display: flex;
+	font-size: 1vw;
 	font-weight: bold;
+	margin-top: -25%;
+	position: absolute;
 	width: 100%;
 	height: 25%;
-	margin-top: -25%;
-	display: flex;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,
+		-1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .hsreplay-involved figcaption span {
