--- a/hsreplaynet/joust/templates/joust/my_replays.html
+++ b/hsreplaynet/joust/templates/joust/my_replays.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
 <div class="row">
 	{% for replay in replays %}
-	<div class="col-xs-3">
+	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 		<!-- hsreplay-negative, hsreplay-positive, hsreplay-invalid -->
 		<a href="{{ replay.get_absolute_url }}" class="hsreplay-thumbnail hsreplay-positive">
 			<div class="hsreplay-involved">
