Joust: Switch to card id-based art loading

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -69,7 +69,7 @@
         Joust.viewer('joust-container')
             .metadata(cb)
             .assets("//static.hsreplay.net/static/joust/assets/")
-            .textures("//static.hsreplay.net/static/joust/textures/")
+            .cardArt("//static.hsreplay.net/static/joust/card-art/")
             .fromUrl('{{ replay_data_url }}');
     });
 </script>
