Tweak replay detail page layout

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -14,8 +14,10 @@
         </div>
     </div>
 </div>
-<div class="container">
-    <p><a href="{{ replay_data_url }}">Download replay</a></p>
+<div class="row">
+    <div class="col-lg-offset-1 col-lg-10 col-xs-12">
+        <p><a href="{{ replay_data_url }}">Download replay</a></p>
+    </div>
 </div>
 
 <script src="http://hsreplay.net/static/joust/bundle.js"></script>
