--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -75,8 +75,8 @@
 		{% block footer %}
 		<p>
 			<a href="https://hearthsim.info">HearthSim</a> &copy; {% now 'Y' %}  &middot;
-			<a href="/about/privacy/">Privacy Policy</a> &middot;
-			<a href="/about/tos/">Terms of Service</a>
+			<a href="{% url 'privacy_policy' %}">Privacy Policy</a> &middot;
+			<a href="{% url 'terms_of_service' %}">Terms of Service</a>
 		</p>
 		<p>
 			This website is not affiliated with Blizzard Entertainment.
