Remove target="_blank" from HDT links

--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -26,7 +26,7 @@
 					</a>
 				</p>
 				<p>
-					<a href="https://hsdecktracker.net/" target="_blank" class="promo-link">Download Hearthstone Deck Tracker</a>
+					<a href="https://hsdecktracker.net/" class="promo-link">Download Hearthstone Deck Tracker</a>
 				</p>
 			{% else %}
 				<p><a href="{% provider_login_url 'battlenet' %}" class="promo-button hero-button">Sign in</a></p>
@@ -70,7 +70,7 @@
 			<ul class="row home-steps">
 				<li class="col-sm-6">
 					<h3>Step 1</h3>
-					<p><a href="https://hsdecktracker.net/" target="_blank" class="promo-button">Download HDT</a></p>
+					<p><a href="https://hsdecktracker.net/" class="promo-button">Download HDT</a></p>
 					<p>Hearthstone Deck Tracker runs while you're in Hearthstone.<br />
 					It will automatically upload your matches as you play them.</p>
 				</li>
