Improve home page

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -71,7 +71,7 @@
 	</div>
 	{% endblock fullcontent %}
 
-	<footer>
+	<footer class="site-footer">
 		{% block footer %}
 		<p>
 			<a href="https://hearthsim.info">HearthSim</a> &copy; {% now 'Y' %}  &middot;
