--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div id="home">
-	<header id="promo">
+	<header id="promo" class="promo">
 		<div class="container">
 			<img src="{% static 'web/images/logo.png' %}" id="logo" alt="HSReplay"/>
 			<h1>HSReplay</h1>
@@ -34,37 +34,45 @@
 			{% endif %}
 		</div>
 	</header>
+
 	<article>
 		<div class="container">
-			<div id="front-intro">
-				<h2>Save all your Hearthstone games</h2>
-				<p>
-					Study and improve your own gameplay.<br/>
-					Share your craziest moments.
-				</p>
-				<a href="{% static 'web/images/joust-screenshot.jpg' %}">
-					<img src="{% static 'web/images/joust-screenshot.jpg' %}" id="feat-joust-screenshot" alt="Joust: View your HSReplays"/>
-				</a>
-			</div>
+            <header class="text-center">
+                <h2>Save all your Hearthstone games</h2>
+                <p>
+                    Study and improve your own gameplay.<br/>
+                    Share your craziest moments.
+                </p>
+            </header>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 text-center">
+                    <a href="{% static 'web/images/joust-screenshot.jpg' %}">
+                        <img src="{% static 'web/images/joust-screenshot.jpg' %}" id="feat-joust-screenshot" alt="Joust: View your HSReplays"/>
+                    </a>
+                </div>
 
-			<figure class="front-feature">
-				<img src="{% static 'web/images/front-feat-history.jpg' %}" alt="Match history" height="120" width="190" />
-				<figcaption>
-					<h2>All your matches in one place</h2>
-					<p>Filter your match history per game type, season, deck and more&hellip;</p>
-				</figcaption>
-			</figure>
+                <div class="col-lg-6 col-sm-12">
+                    <figure class="front-feature">
+                        <img src="{% static 'web/images/front-feat-history.jpg' %}" alt="Match history" height="120" width="190" />
+                        <figcaption>
+                            <h2>All your matches in one place</h2>
+                            <p>Filter your match history per game type, season, deck and more&hellip;</p>
+                        </figcaption>
+                    </figure>
 
-			<figure class="front-feature flip">
-				<img src="{% static 'web/images/front-feat-stats.jpg' %}" alt="Monthly statistics" height="120" width="190" />
-				<figcaption>
-					<h2>Track your performance every season</h2>
-					<p>Follow your rank progression through the month and save your longest win streaks!</p>
-				</figcaption>
-			</figure>
-		</div>
+                    <figure class="front-feature flip">
+                        <img src="{% static 'web/images/front-feat-stats.jpg' %}" alt="Monthly statistics" height="120" width="190" />
+                        <figcaption>
+                            <h2>Track your performance every season</h2>
+                            <p>Follow your rank progression through the month and save your longest win streaks!</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
 	</article>
-	<article>
+
+	<article class="promo">
 		<div class="container">
 			<h2 class="text-center">How it works:</h2>
 			<ul class="row home-steps">
@@ -81,14 +89,21 @@
 					Share individual games with your friends and show off your craziest plays!</p>
 				</li>
 			</ul>
-			<p class="text-center">
-				{% if user.is_authenticated %}
-					<a href="{% url 'my_replays' %}" class="promo-button">View your replays</a>
-				{% else %}
-					<a href="{% provider_login_url 'battlenet' %}" class="promo-button hero-button">Sign in to view your replays</a>
-				{% endif %}
-			</p>
 		</div>
 	</article>
+
+    <article class="text-center">
+        {% if user.is_authenticated %}
+            <h2>You're all set!</h2>
+            <p class="front-pad"><a href="{% url 'my_replays' %}" class="promo-button hero-button">View your replays</a></p>
+        {% else %}
+            <h2>Let's go!</h2>
+            <p class="front-pad"><a href="{% provider_login_url 'battlenet' %}" class="promo-button hero-button">Sign in</a></p>
+        {% endif %}
+	</article>
+
+    <footer>
+        <p class="visible-xs text-center"><a href="#">&uparrow; Back to top</a></p>
+    </footer>
 </div>
 {% endblock content %}
