--- a/hsreplaynet/joust/templates/joust/my_replays.html
+++ b/hsreplaynet/joust/templates/joust/my_replays.html
@@ -10,7 +10,7 @@
 	{% for replay in replays %}
 	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 		<!-- hsreplay-negative, hsreplay-positive, hsreplay-invalid -->
-		<a href="{{ replay.get_absolute_url }}" class="hsreplay-thumbnail hsreplay-positive">
+		<a href="{{ replay.get_absolute_url }}" class="hsreplay-thumbnail {{ replay.css_classes }}">
 			<div class="hsreplay-involved">
 				<img src="{% static 'web/images/vs.png' %}" class="hsreplay-versus"/>
 				{% for player in replay.global_game.players.all %}
